syntax = "proto3";

package tekton;

import "taskrun.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option go_package = "./proto";

service Results {
  rpc CreateTaskRunResult (CreateTaskRunRequest) returns (TaskRunResult) {}
  rpc UpdateTaskRunResult (UpdateTaskRunRequest) returns (TaskRunResult) {}
  rpc GetTaskRunResult    (GetTaskRunRequest)    returns (TaskRunResult) {}
  rpc DeleteTaskRunResult (DeleteTaskRunRequest) returns (google.protobuf.Empty) {}  
  rpc ListTaskRunsResult  (ListTaskRunsRequest)  returns (ListTaskRunsResponse) {}
}

message TaskRunResult {
	TaskRun task_run = 1;
	string results_id = 2;
}

message CreateTaskRunRequest {
	TaskRun task_run = 1;
	// TODO: Accept some unique cluster identifier?
}

message DeleteTaskRunRequest {
	string results_id = 1;
}

message UpdateTaskRunRequest {
	TaskRun task_run = 1;
	string results_id = 2;
	google.protobuf.FieldMask update_mask = 3;
}

message GetTaskRunRequest {
	string results_id = 1;
}

message ListTaskRunsRequest {
	// TODO: document query format.
	string filter = 1;
}

message ListTaskRunsResponse {
	repeated TaskRunResult items = 1;
	// TODO: next_page_token, etc.
}

